--- a/views/layout/default.pug
+++ b/views/layout/default.pug
@@ -3,7 +3,7 @@ html(lang="ko")
 	head
 		meta(charset="UTF-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
-		title= title
+		title SB
 		link(rel="stylesheet" href="/css/all.min.css")
 		link(rel="stylesheet" href="/css/bootstrap.min.css")
 		link(rel="stylesheet" href="/css/reset.css")
@@ -15,7 +15,7 @@ html(lang="ko")
 		block js
 	body
 		include ../include/header
-		include ../include/titlebar
 		block content
+			h1 sb default
 		if js
 			script(src=`/js/${js}.js`)
