--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,27 +1,35 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
   color: inherit;
 }
 
-header .wrapper {
-  width: 100%;
-  background-color: #222;
-}
-
 header .wrapper .navi-wrapper {
-  width: 5%;
+  width: 70px;
   height: 100vh;
   background-color: #1d1d1d;
-  padding-top: 20%;
+  position: relative;
 }
 
-header .wrapper .navi-wrapper .menu {
+header .wrapper .navi-wrapper .navi {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+header .wrapper .navi-wrapper .navi .menu {
   width: 100%;
   height: 50px;
   text-align: center;
 }
 
-header .wrapper .navi-wrapper .menu a {
-  font-size: 1.5em;
+header .wrapper .navi-wrapper .navi .menu a {
+  font-size: 1.7em;
   color: #dedede;
 }
