--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -1,3 +1,9 @@
+html, body {
+  width: 100%; height: 100%;
+  overflow: hidden;
+}
+
+
 a {
   text-decoration: none;
   color: inherit;
@@ -7,18 +13,21 @@ a {
 
 header{
   .wrapper {
-    width: 100%;
-    background-color: #222;
     .navi-wrapper {
-      width: 5%; height: 100vh;
+      width: 70px; height: 100vh;
       background-color: #1d1d1d;
-      padding-top: 20%;
-      .menu {
-        width: 100%; height: 50px;
-        text-align: center;
-        a{
-          font-size: 1.5em;
-          color: #dedede;
+      position: relative;
+      .navi {
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%, -50%);
+        .menu {
+          width: 100%; height: 50px;
+          text-align: center;
+          a{
+            font-size: 1.7em;
+            color: #dedede;
+          }
         }
       }
     }
