--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -1,13 +1,13 @@
 header
-  .wrapper 
+  .wrapper
     .navi-wrapper
-      .menu.home
-        a(href="/").i.fa.fa-home
-      .menu.skills
-        a(href="/skills") S
-      .menu.projects
-        a(href="/projects") P
-      .menu.contact
-        a(href="/contact").i.fa.fa-envelope
-      
-    
+      .navi
+        .menu.home
+          a(href="/").i.fa.fa-home
+        .menu.skills
+          a(href="/skills") S
+        .menu.projects
+          a(href="/projects") P
+        .menu.contact
+          a(href="/contact").i.fa.fa-envelope
+  
