--- a/views/layout/default.pug
+++ b/views/layout/default.pug
@@ -9,13 +9,12 @@ html(lang="ko")
 		link(rel="stylesheet" href="/css/reset.css")
 		block css
 		link(rel="stylesheet" href="/css/common.css")
-		if css
-			link(rel="stylesheet" href=`/css/${css}.css`)
+		link(rel="stylesheet" href="/css/home.css")
+		link(rel="stylesheet" href="/css/skills.css")
 		script(src="/js/jquery-3.5.1.min.js")
 		block js
 	body
 		include ../include/header
 		block content
-			h1 sb default
 		if js
 			script(src=`/js/${js}.js`)
