--- a/public/css/common.css
+++ b/public/css/common.css
@@ -9,26 +9,26 @@ a {
   color: inherit;
 }
 
+header .wrapper {
+  background-color: #1d1d1d;
+}
 header .wrapper .navi-wrapper {
   width: 70px;
   height: 100vh;
-  background-color: #1d1d1d;
+  background-color: #111;
   position: relative;
 }
-
 header .wrapper .navi-wrapper .navi {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 header .wrapper .navi-wrapper .navi .menu {
   width: 100%;
   height: 50px;
   text-align: center;
 }
-
 header .wrapper .navi-wrapper .navi .menu a {
   font-size: 1.7em;
   color: #dedede;
