--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -1,6 +1,36 @@
 extends ../layout/default
 block content
 	.title-wrapper
-		div.color 
-		.title Skills 
+		.color 
+		.title Skills
+	.box-wrapper 
+		.frameworks frameworks
+			.tape
+				img(src="../img/tape.png", alt="TapeImg")
+			.line
+			//- img(src="../img/sass.png", alt="")
+			//- img(src="../img/bootstrap.png", alt="")
+			//- img(src="../img/firebase.png", alt="")
+			//- img(src="../img/es6.png", alt="")
+			//- img(src="../img/jquery.png", alt="")
+			//- img(src="../img/react.png", alt="")
+			//- img(src="../img/vue.png", alt="")
+		.frontend front-end
+			//- img(src="../img/html.png", alt="")
+			//- img(src="../img/css.png", alt="")
+			//- img(src="../img/pug.png", alt="")
+			//- img(src="../img/js.png", alt="")
+		.backend back-end
+			.line
+			//- img(src="../img/mysql.png", alt="")
+			//- img(src="../img/aws.png", alt="")
+		.tools tools
+			.line
+			//- img(src="../img/github.png", alt="")
+			//- img(src="../img/visualstudio.png", alt="")
+		.design design		
+			.line
+			//- img(src="../img/photoshop.png", alt="")
+			//- img(src="../img/illerstrator.png", alt="")
+
 	
