--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,148 +1,177 @@
 .img-wrapper {
   width: 100%;
-  height: 100%;
-  background: url(../img/1.jpg) no-repeat center center fixed;
+  height: 920px;
+  overflow: hidden;
+  background: url(../img/1-2.jpg) no-repeat center center fixed;
   position: absolute;
   top: 0;
   left: 70px;
 }
+
 .img-wrapper .title-wrapper {
   color: #dedede;
   font-size: 3em;
   position: absolute;
-  top: 40%;
+  top: 45%;
   left: 50%;
-  transform: translate(-50%, -40%);
+  transform: translate(-50%, -45%);
   width: 57%;
 }
+
 .img-wrapper .title-wrapper .title-wrap {
   position: relative;
 }
+
 .img-wrapper .title-wrapper .title-wrap .box {
   width: 0.2em;
-  height: 1.125em;
+  height: 1em;
   background-color: #4af1f1;
   position: absolute;
   left: -1.6%;
+  top: 1.5%;
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .box {
     width: 0.5em;
     height: 1.9em;
-    left: -4%;
+    left: -25%;
   }
 }
+
 .img-wrapper .title-wrapper .title-wrap .line {
-  width: 90%;
+  width: 100%;
   height: 0.02em;
   background-color: #4af1f1;
   position: absolute;
   left: 75.2%;
   top: 43%;
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .line {
-    width: 0.5em;
-    height: 1.9em;
-    left: -4%;
+    top: 7%;
+    left: 37%;
   }
 }
+
 .img-wrapper .title-wrapper .title-wrap .p {
   padding-right: 0.5em;
 }
+
 .img-wrapper .title-wrapper .title-wrap .hello {
   font-size: 1.2em;
+  font-family: "Noto Serif KR", serif;
   padding-bottom: 0.5em;
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .hello {
-    font-size: 1.8em;
+    font-size: 2em;
     padding-top: 0.1em;
-    padding-bottom: 1em;
+    padding-bottom: 2em;
+    margin-left: -1.8em;
   }
 }
+
 .img-wrapper .title-wrapper .title-wrap .title {
   display: flex;
   align-items: baseline;
   font-size: 1.5em;
   padding-left: 1em;
 }
+
 .img-wrapper .title-wrapper .title-wrap .title .p2 {
   color: #4af1f1;
+  font-family: "Noto Serif KR", serif;
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .title .p2 {
     max-width: 100%;
     font-size: 2.3em;
     padding-bottom: 0.2em;
   }
 }
+
 .img-wrapper .title-wrapper .title-wrap .title .p3 {
   font-size: 1.2em;
+  font-family: "Noto Sans KR", sans-serif;
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .title .p3 {
     font-size: 2em;
-    padding-left: 1.8em;
+    padding-left: 2em;
   }
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .title {
     max-width: 100%;
     display: block;
     font-size: 1.5em;
   }
 }
+
 .img-wrapper .title-wrapper .title-wrap .title .p4 {
   font-size: 0.9em;
+  font-family: "Noto Serif KR", serif;
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .title .p4 {
-    max-width: 100%;
-    font-size: 1em;
-    display: block;
-    padding-left: 6em;
-    padding-top: 0.5em;
+    font-size: 1.3em;
+    padding-left: 4.1em;
+    padding-top: 1em;
   }
 }
+
 .img-wrapper .title-wrapper .title-wrap .p5 {
   font-size: 0.6em;
   padding-left: 5em;
   padding-top: 0.7em;
+  font-family: "Source Sans Pro", sans-serif;
 }
-@media screen and (max-width: 623px) {
+
+@media screen and (max-width: 680px) {
   .img-wrapper .title-wrapper .title-wrap .p5 {
     position: absolute;
     bottom: -30em;
   }
 }
+
 @media screen and (max-width: 1700px) {
   .img-wrapper .title-wrapper {
     font-size: 2.5em;
   }
 }
+
 @media screen and (max-width: 1580px) {
   .img-wrapper .title-wrapper {
     font-size: 2em;
   }
 }
+
 @media screen and (max-width: 1250px) {
   .img-wrapper .title-wrapper {
     font-size: 1.5em;
   }
 }
+
 @media screen and (max-width: 991px) {
   .img-wrapper .title-wrapper {
     font-size: 1.2em;
   }
 }
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 615px) {
   .img-wrapper .title-wrapper {
-    max-width: 100%;
     font-size: 1em;
   }
 }
-@media screen and (max-width: 500px) {
+
+@media screen and (max-width: 515px) {
   .img-wrapper .title-wrapper {
     display: none;
   }
