--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -1,22 +1,27 @@
+@import './mixin';
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap');
+
+
 html, body {
-  width: 100%; height: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
-
-
 a {
   text-decoration: none;
   color: inherit;
 }
 
-
-
 header{
-  .wrapper {
+  .h-wrapper {
     background-color: #1d1d1d;
+    background: url(../img/p3-2.jpg) no-repeat center center fixed;
     .navi-wrapper {
       width: 70px; height: 100vh;
       background-color: #111;
+      box-shadow: 0 5px 40px rgba(0, 0, 0, 0.4);
       position: relative;
       .navi {
         position: absolute;
@@ -28,21 +33,7 @@ header{
           a{
             font-size: 1.7em;
             color: #dedede;
-            // position: relative;
-            // .p {
-            //   color: #1d1d1d;
-            //   background-color: #666666;
-            //   position: absolute;
-            //   top: 0; left: 2.5em;
-            //   opacity: 1;
-            //   font-size: 0.8em;
-            // }
           }
-          // a:hover {
-          //   .p {
-          //     opacity: 1;
-          //   }
-          // }
         }
       }
     }
