--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -2,29 +2,30 @@
 
 
 .img-wrapper {
-	width: 100%; height: 100%;
-	background: url(../img/1.jpg) no-repeat center center fixed;
+	width: 100%; height: 920px;
+	overflow: hidden;
+	background: url(../img/1-2.jpg) no-repeat center center fixed;
 	position: absolute; top: 0; left: 70px;
 	.title-wrapper {
 		color: #dedede;
 		font-size: 3em;
-		position: absolute; top: 40%; left: 50%;
-		transform: translate(-50%, -40%);
+		position: absolute; top: 45%; left: 50%;
+		transform: translate(-50%, -45%);
 		width: 57%;
 		.title-wrap {
 			position: relative;
 			.box {
-				width: 0.2em; height: 1.125em; background-color: #4af1f1; position: absolute; left: -1.6%;
-				@include mobile {
+				width: 0.2em; height: 1em; background-color: #4af1f1; position: absolute; left: -1.6%; top: 1.5%;
+				@include tablet {
 					width: 0.5em; height: 1.9em;
-					left: -4%;
+					left: -25%;
 				}
 			}
 			.line {
-				width: 90%; height: 0.02em; background-color: #4af1f1; position: absolute; left: 75.2%; top: 43%;
-				@include mobile {
-					width: 0.5em; height: 1.9em;
-					left: -4%;
+				width: 100%; height: 0.02em; background-color: #4af1f1; position: absolute; left: 75.2%; top: 43%;
+				@include tablet {
+					top: 7%;
+					left: 37%;
 				}
 			}
 			.p {
@@ -32,11 +33,13 @@
 			}
 			.hello {
 				font-size: 1.2em;
+				font-family: $Notof;
 				padding-bottom: 0.5em;
-				@include mobile {
-					font-size: 1.8em;
+				@include tablet {
+					font-size: 2em;
 					padding-top: 0.1em;
-					padding-bottom: 1em;
+					padding-bottom: 2em;
+					margin-left: -1.8em;
 				}
 			}
 			.title {
@@ -45,7 +48,8 @@
 				padding-left: 1em;
 				.p2 {
 					color: #4af1f1;
-					@include mobile {
+					font-family: $Notof;
+					@include tablet {
 						max-width: 100%;
 						font-size: 2.3em;
 						padding-bottom: 0.2em;
@@ -53,23 +57,23 @@
 				}
 				.p3 {
 					font-size: 1.2em;
-					@include mobile {
+					font-family: $Notos;
+					@include tablet {
 						font-size: 2em;
-						padding-left: 1.8em;
+						padding-left: 2em;
 					}
 				}
-				@include mobile {
+				@include tablet {
 					max-width: 100%; display: block;
 					font-size: 1.5em;
 				}
 				.p4 {
 					font-size: 0.9em;
-					@include mobile {
-					max-width: 100%;
-					font-size: 1em;
-					display: block;
-					padding-left: 6em;
-					padding-top: 0.5em;
+					font-family: $Notof;
+					@include tablet {
+					font-size: 1.3em;
+					padding-left: 4.1em;
+					padding-top: 1em;
 					}
 				}
 			}
@@ -77,7 +81,8 @@
 				font-size: 0.6em;
 				padding-left: 5em;
 				padding-top: 0.7em;
-				@include mobile {
+				font-family: $Source;
+				@include tablet {
 					position: absolute;
 					bottom: -30em;
 				}
@@ -95,8 +100,7 @@
 		@include laptop {
 			font-size: 1.2em;
 		}
-		@include tablet {
-			max-width: 100%;
+		@include mobile {
 			font-size: 1em;
 		}
 		@include mobileS {
