--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -1,14 +1,34 @@
 @import './mixin';
 
-.title-wrapper {
-	position: absolute;
-	top: 8%; left: 12%;
-	color: #dedede;
-	font-size: 4.5em;
-	display: flex; align-items: baseline;
-	div.color {
-		width: 0.5em; height: 0.1em;
+.container {
+	height: 1208px;
+	.title-wrapper {
+		position: absolute;
+		top: 12%; left: 15%;
+		color: #dedede;
+		font-size: 4.5em;
+		display: flex; align-items: baseline;
+		font-family: $Source;
+		.color {
+			width: 0.5em; height: 0.1em;
+			background-color: #4af1f1;
+			margin-right: 0.1em;
+		}
+	}
+	.line {
+		width: 0.02em; height: 80%;
 		background-color: #4af1f1;
-		margin-right: 0.1em;
+		position: absolute; top: 25.5%; left: 22.3%;
+		.dot {
+			color: #dedede;
+			.title {
+				display: flex; align-items: center; justify-content: space-between;
+				width: 200px; font-family: $d2;
+				padding-left: 1em;
+			}
+			.box {
+				width: 300px; height: 200px; background-color: #dedede;
+			}
+		}
 	}
 }
