--- a/views/layout/default.pug
+++ b/views/layout/default.pug
@@ -11,6 +11,8 @@ html(lang="ko")
 		link(rel="stylesheet" href="/css/common.css")
 		link(rel="stylesheet" href="/css/home.css")
 		link(rel="stylesheet" href="/css/skills.css")
+		link(rel="stylesheet" href="/css/projects.css")
+		//- link(rel="stylesheet" href="/css/contact.css")
 		script(src="/js/jquery-3.5.1.min.js")
 		block js
 	body
