--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -1,6 +1,11 @@
 extends ../layout/default
 block content
-	.title-wrapper
-		div.color 
-		.title Projects 
-	
+	.container
+		.title-wrapper
+			.color 
+			.main-title Projects
+		.line
+			.dot
+				.title html / css / javascript
+				a(href="")
+					img.box(src="", alt="")
