--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -6,6 +6,30 @@ block content
 			.main-title Projects
 		.line
 			.dot
-				.title html / css / javascript
-				a(href="")
+		.html-wrapper
+			.html html / css / javascript
+		//- 	.box-wrapper
+		//- 		.box.a(href="")
+		//- 			img.box(src="", alt="")
+		//- 		.box.a(href="")
+		//- 			img.box(src="", alt="")
+		//- 		.box.a(href="")
+		//- 			img.box(src="", alt="")
+		//- .node-wrapper
+		//- 	.node node.js
+		//- 	.box-wrapper
+		//- 		.box.a(href="")
+		//- 			img.box(src="", alt="")
+		//- 		.box.a(href="")
+		//- 			img.box(src="", alt="")
+		//- 		.box.a(href="")
+		//- 			img.box(src="", alt="")
+		//- .vue-wrapper
+			.vue react / vue
+			.box-wrapper
+				.box.a(href="")
+					img.box(src="", alt="")
+				.box.a(href="")
+					img.box(src="", alt="")
+				.box.a(href="")
 					img.box(src="", alt="")
