--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,7 +1,12 @@
+@media screen and (max-width: 2000px) {
+  body {
+    overflow: hidden;
+  }
+}
+
 .img-wrapper {
   width: 100%;
-  height: 920px;
-  overflow: hidden;
+  height: 100%;
   background: url(../img/1-2.jpg) no-repeat center center fixed;
   position: absolute;
   top: 0;
