--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -6,9 +6,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap');
 
 
-html, body {
-  // overflow: hidden;
-}
 a {
   text-decoration: none;
   color: inherit;
@@ -19,6 +16,7 @@ header{
     background-color: #1d1d1d;
     background: url(../img/p3-2.jpg) no-repeat center center fixed;
     .navi-wrapper {
+      z-index: 9999;
       width: 70px; height: 100vh;
       background-color: #111;
       box-shadow: 0 5px 40px rgba(0, 0, 0, 0.4);
