--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -1,9 +1,13 @@
 @import './mixin';
 
+@include original {
+	body {
+		overflow: hidden;
+	}
+}
 
 .img-wrapper {
-	width: 100%; height: 920px;
-	overflow: hidden;
+	width: 100%; height: 100%;
 	background: url(../img/1-2.jpg) no-repeat center center fixed;
 	position: absolute; top: 0; left: 70px;
 	.title-wrapper {
@@ -108,4 +112,3 @@
 		}
 	}
 }
-
