--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -1,2 +1,26 @@
 extends ../layout/default
 block content
+  .title-wrapper
+    .color 
+    .title Contact
+    
+  .text-wrapper
+    .text-wrap
+      .hello.he1 안녕하세요.
+      .hello.he2 제 첫 포트폴리오에 들어오신 것을 환영합니다. >_<
+      .text
+        .hello.he3 혹시 궁금하신 점이 있다면 아래에 있는 
+        .hello.he4 이메일
+          .pen
+        .hello.he5 로 연락 주세요.
+      .hello.he6 지금까지 성장하는 개발자 이세빈이였습니다 !
+    .line 
+    .container .container 
+      .contact-wrapper
+        h1 h1
+        .contact CONTACT
+      .contact-line
+      .p.git-hub .git-hub :  
+        a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
+      .p.e-mail .e-mail : gobltpqls99@naver.com
+      .p.cell-phone .cell-phone : 010-7197-3595
