--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -5,31 +5,30 @@ block content
 			.color 
 			.main-title Projects
 		.line
-			.dot
-		.html-wrapper
-			.html html / css / javascript
-		//- 	.box-wrapper
-		//- 		.box.a(href="")
-		//- 			img.box(src="", alt="")
-		//- 		.box.a(href="")
-		//- 			img.box(src="", alt="")
-		//- 		.box.a(href="")
-		//- 			img.box(src="", alt="")
-		//- .node-wrapper
-		//- 	.node node.js
-		//- 	.box-wrapper
-		//- 		.box.a(href="")
-		//- 			img.box(src="", alt="")
-		//- 		.box.a(href="")
-		//- 			img.box(src="", alt="")
-		//- 		.box.a(href="")
-		//- 			img.box(src="", alt="")
-		//- .vue-wrapper
-			.vue react / vue
-			.box-wrapper
-				.box.a(href="")
-					img.box(src="", alt="")
-				.box.a(href="")
-					img.box(src="", alt="")
-				.box.a(href="")
-					img.box(src="", alt="")
+			.dot1 
+				.html html / css / javascript
+					.box-wrapper
+						.box.a(href="")
+							img.box(src="", alt="")
+						.box.a(href="")
+							img.box(src="", alt="")
+						.box.a(href="")
+							img.box(src="", alt="")
+			.dot2 
+				.node node.js
+					.box-wrapper
+						.box.a(href="")
+							img.box(src="", alt="")
+						.box.a(href="")
+							img.box(src="", alt="")
+						.box.a(href="")
+							img.box(src="", alt="")
+			.dot3 
+				.vue react / vue
+					.box-wrapper
+						.box.a(href="")
+							img.box(src="", alt="")
+						.box.a(href="")
+							img.box(src="", alt="")
+						.box.a(href="")
+							img.box(src="", alt="")
