--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -1,7 +1,3 @@
-.container {
-  overflow: visible;
-}
-
 .container .title-wrapper {
   position: absolute;
   top: 12%;
@@ -22,52 +18,166 @@
 
 .container .line {
   width: 0.02em;
-  height: 80%;
+  height: 150%;
   background-color: #4af1f1;
   position: absolute;
-  top: 25.5%;
-  left: 22.3%;
+  top: 25%;
+  left: 26.5%;
 }
 
-.container .line .dot {
+.container .line .dot1 {
   color: #dedede;
   width: 10px;
   height: 10px;
   border-radius: 50%;
   background-color: #4af1f1;
   position: absolute;
-  top: 20%;
+  top: 15%;
   left: -0.24em;
+  position: relative;
 }
 
-.container .html-wrapper .html {
-  color: #dedede;
-  padding-left: 2em;
-  margin-top: 3em;
-  font-size: 1.2em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.container .line .dot1 .html {
   width: 300px;
+  color: #dedede;
+  font-size: 1.3em;
   font-family: "Nanum Gothic Coding", monospace;
+  position: absolute;
+  top: -30%;
+  left: 1.8em;
 }
 
-.container .html-wrapper .box-wrapper {
+.container .line .dot1 .html .box-wrapper {
   position: absolute;
-  top: 6em;
-  left: 18em;
+  top: 5.2em;
+  left: 13.2em;
   display: flex;
 }
 
-.container .html-wrapper .box-wrapper .box {
+.container .line .dot1 .html .box-wrapper .box {
   width: 300px;
   height: 200px;
   background-color: #dedede;
   margin-right: 1.5em;
 }
 
+.container .line .dot2 {
+  color: #dedede;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #4af1f1;
+  position: absolute;
+  top: 42%;
+  left: -0.24em;
+}
+
+.container .line .dot2 .node {
+  width: 300px;
+  color: #dedede;
+  font-size: 1.3em;
+  font-family: "Nanum Gothic Coding", monospace;
+  position: absolute;
+  top: -30%;
+  left: 1.8em;
+}
+
+.container .line .dot2 .node .box-wrapper {
+  position: absolute;
+  top: 5.2em;
+  left: 13.2em;
+  display: flex;
+}
+
+.container .line .dot2 .node .box-wrapper .box {
+  width: 300px;
+  height: 200px;
+  background-color: #dedede;
+  margin-right: 1.5em;
+}
+
+.container .line .dot3 {
+  color: #dedede;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #4af1f1;
+  position: absolute;
+  top: 68%;
+  left: -0.24em;
+}
+
+.container .line .dot3 .vue {
+  width: 300px;
+  color: #dedede;
+  font-size: 1.3em;
+  font-family: "Nanum Gothic Coding", monospace;
+  position: absolute;
+  top: -30%;
+  left: 1.8em;
+}
+
+.container .line .dot3 .vue .box-wrapper {
+  position: absolute;
+  top: 5.2em;
+  left: 13.2em;
+  display: flex;
+}
+
+.container .line .dot3 .vue .box-wrapper .box {
+  width: 300px;
+  height: 200px;
+  background-color: #dedede;
+  margin-right: 1.5em;
+}
+
+@media screen and (max-width: 1250px) {
+  .container .line {
+    top: 30%;
+    height: 320%;
+    left: 28%;
+  }
+  .container .line .dot1 {
+    top: 8em;
+  }
+  .container .line .dot1 .html .box-wrapper {
+    left: 40%;
+    top: 14em;
+    flex-direction: column;
+  }
+  .container .line .dot1 .html .box-wrapper .box {
+    margin: 1em 0;
+  }
+  .container .line .dot2 {
+    top: 70em;
+  }
+  .container .line .dot2 .node .box-wrapper {
+    left: 40%;
+    top: 14em;
+    flex-direction: column;
+  }
+  .container .line .dot2 .node .box-wrapper .box {
+    margin: 1em 0;
+  }
+  .container .line .dot3 {
+    top: 130em;
+  }
+  .container .line .dot3 .vue .box-wrapper {
+    left: 40%;
+    top: 14em;
+    flex-direction: column;
+  }
+  .container .line .dot3 .vue .box-wrapper .box {
+    margin: 1em 0;
+  }
+}
+
 @media screen and (max-width: 2000px) {
   body {
     overflow-y: auto;
+    min-width: 100%;
+    min-height: 100%;
+    background-color: #1d1d1d;
+    background: url(../img/p3-2.jpg) no-repeat center center fixed;
   }
 }
