--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -10,21 +10,21 @@ a {
   text-decoration: none;
   color: inherit;
 }
+a:hover{
+  color: #4bf1f1;
+}
 
 header{
   .h-wrapper {
-    background-color: #1d1d1d;
     background: url(../img/p3-2.jpg) no-repeat center center fixed;
     .navi-wrapper {
       z-index: 9999;
-      width: 70px; height: 100vh;
-      background-color: #111;
-      box-shadow: 0 5px 40px rgba(0, 0, 0, 0.4);
+      background-color: #1d1d1d;
       position: relative;
       .navi {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translate(-50%, -50%);
+        position: fixed;
+        top: 50%; transform: translateY(-50%);
+        left: 1.25%;
         .menu {
           width: 100%; height: 50px;
           text-align: center;
