--- a/public/css/common.css
+++ b/public/css/common.css
@@ -11,30 +11,28 @@ a:hover {
   color: #4bf1f1;
 }
 
-header .h-wrapper {
-  background: url(../img/p3-2.jpg) no-repeat center center fixed;
-}
-
-header .h-wrapper .navi-wrapper {
+header {
   z-index: 9999;
-  background-color: #1d1d1d;
-  position: relative;
-}
-
-header .h-wrapper .navi-wrapper .navi {
+  width: 70px;
+  height: 100vh;
+  background-color: #111;
   position: fixed;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 1.25%;
 }
 
-header .h-wrapper .navi-wrapper .navi .menu {
+header .navi {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+header .navi .menu {
   width: 100%;
   height: 50px;
   text-align: center;
 }
 
-header .h-wrapper .navi-wrapper .navi .menu a {
+header .navi .menu a {
   font-size: 1.7em;
   color: #dedede;
 }
