--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -16,177 +16,158 @@
   margin-right: 0.1em;
 }
 
-.text-wrapper {
+.con-wrapper {
   width: 100%;
+  height: 100vh;
+  position: relative;
+}
+
+.con-wrapper .text-wrapper {
+  width: 570px;
+  height: 200px;
   color: #dedede;
   font-family: "Noto Sans KR", sans-serif;
   position: absolute;
-  top: 33%;
+  bottom: 46.7%;
   left: 15%;
   font-size: 1.2em;
 }
 
-.text-wrapper .text-wrap {
-  position: relative;
-}
-
-.text-wrapper .text-wrap .hello {
+.con-wrapper .text-wrapper .text-wrap .hello {
   margin-top: 1.3em;
 }
 
-.text-wrapper .text-wrap .text {
+.con-wrapper .text-wrapper .text-wrap .text {
   display: flex;
   justify-content: baseline;
 }
 
-.text-wrapper .text-wrap .text .hello {
+.con-wrapper .text-wrapper .text-wrap .text .hello {
   margin-top: 1.3em;
   padding-right: 0.5em;
 }
 
-.text-wrapper .text-wrap .text .he4 {
+.con-wrapper .text-wrapper .text-wrap .text .he4 {
   position: relative;
+  width: 66px;
 }
 
-.text-wrapper .text-wrap .text .he4 .pen {
-  width: 58px;
-  height: 15px;
+.con-wrapper .text-wrapper .text-wrap .text .he4 .pen {
+  width: 100%;
+  height: 12px;
   background-color: #4bf1f14f;
   position: absolute;
-  top: 27%;
-  left: -2.6%;
-  transform: translate(0, 27%);
+  top: 60%;
+  left: -5%;
 }
 
-.text-wrapper .line {
+.con-wrapper .line {
   width: 100%;
-  height: 0.02em;
+  height: 0.01em;
   background-color: #4bf1f1;
   position: absolute;
-  left: 27%;
-  top: 72.5%;
+  left: 43%;
+  top: 45.5%;
 }
 
-.text-wrapper .container {
+.con-wrapper .container {
   position: absolute;
-  right: -10%;
-  top: 85%;
-  font-size: 1.2em;
+  bottom: 20%;
+  left: 65%;
+  color: #dedede;
+  font-size: 1.45em;
   font-family: "Nanum Gothic Coding", monospace;
 }
 
-.text-wrapper .container .contact-wrapper {
+.con-wrapper .container .contact-wrapper {
   display: flex;
   align-items: baseline;
   font-size: 1.5em;
 }
 
-.text-wrapper .container .contact-wrapper h1 {
+.con-wrapper .container .contact-wrapper h1 {
   padding: 1.3em 0;
   padding-left: 1.5em;
   padding-right: 0.5em;
+  position: relative;
 }
 
-.text-wrapper .container .contact-line {
-  width: 200px;
-  height: 23px;
-  background-color: #4bf1f14f;
+.con-wrapper .container .contact-wrapper h1 .contact-line {
   position: absolute;
-  top: 36%;
-  left: 4.7%;
+  left: 44.5%;
+  bottom: 35%;
+  width: 180px;
+  height: 17px;
+  background-color: #4bf1f14f;
 }
 
-.text-wrapper .container .p {
+.con-wrapper .container .p {
   padding: 0.5em 2em;
   font-size: 0.7em;
 }
 
 @media screen and (max-width: 1700px) {
-  .text-wrapper .line {
-    left: 34%;
-  }
-  .text-wrapper .container {
-    right: -25%;
+  .con-wrapper .line {
+    left: 49%;
   }
 }
 
 @media screen and (max-width: 1580px) {
-  .text-wrapper .line {
-    left: 37%;
-  }
-  .text-wrapper .container {
-    right: -28%;
+  .con-wrapper .line {
+    left: 55%;
   }
 }
 
 @media screen and (max-width: 1430px) {
-  .text-wrapper .line {
-    left: 42%;
-  }
-  .text-wrapper .container {
-    right: -38%;
+  .con-wrapper .line {
+    left: 60%;
   }
 }
 
 @media screen and (max-width: 1250px) {
-  .text-wrapper .line {
-    left: -10%;
-    top: 12em;
-  }
-  .text-wrapper .container {
-    right: -40%;
-    top: 12em;
+  .con-wrapper .line {
+    left: 0%;
+    top: 60%;
   }
 }
 
 @media screen and (max-width: 1199px) {
-  .text-wrapper .container {
-    right: -35%;
-  }
-  .text-wrapper .container .contact-line {
-    left: 5.5%;
-  }
-}
-
-@media screen and (max-width: 991px) {
-  .text-wrapper .container {
-    right: -18%;
-  }
-  .text-wrapper .container .contact-line {
-    left: 7.2%;
+  .con-wrapper .container {
+    right: 60%;
+    bottom: 9%;
+    transform: translateX(-60%);
   }
 }
 
 @media screen and (max-width: 767px) {
-  .text-wrapper .container {
-    right: 3%;
-  }
-  .text-wrapper .container .contact-line {
-    left: 9%;
+  .con-wrapper .text-wrapper {
+    font-size: 1em;
   }
 }
 
 @media screen and (max-width: 615px) {
-  .text-wrapper {
-    font-size: 1em;
+  .con-wrapper {
+    font-size: 0.8em;
   }
-  .text-wrapper .text-wrapper .text-wrap .text .he4 .pen {
-    max-width: 48px;
+  .con-wrapper .text-wrapper {
+    width: 400px;
+    margin-left: 10px;
   }
-  .text-wrapper .container .contact-line {
-    width: 150px;
-    left: 9.5%;
+  .con-wrapper .line {
+    top: 48%;
+  }
+  .con-wrapper .container {
+    bottom: 27%;
+    left: 20%;
+    transform: translateX(0);
   }
 }
 
 @media screen and (max-width: 515px) {
-  .text-wrapper {
-    font-size: 0.75em;
+  .con-wrapper .text-wrapper {
+    display: none;
   }
-  .text-wrapper .container .contact-line {
-    width: 150px;
-    height: 18px;
-    left: 9.5%;
-    top: 35%;
+  .con-wrapper .container {
+    display: none;
   }
 }
