--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -17,34 +17,32 @@
 }
 
 .box-wrapper {
-  position: absolute;
-  top: 40%;
-  left: 53%;
-  transform: translate(-40%, -53%);
+  font-family: "Nanum Gothic Coding", monospace;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 2em;
   color: #dedede;
   font-size: 1.5em;
-}
-
-.box-wrapper img {
-  width: 70px;
-  height: 70px;
 }
 
 .box-wrapper .frameworks {
   text-align: center;
   width: 450px;
   height: 380px;
-  background: rgba(255, 255, 255, 0.13);
+  background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
-  padding-top: 2em;
+  padding-top: 1.5em;
   position: relative;
 }
 
 .box-wrapper .frameworks .tape {
+  width: 30px;
+  height: 70px;
+  background-color: rgba(255, 255, 255, 0.26);
   position: absolute;
-  top: -13%;
+  top: -11%;
   left: 48%;
-  transform: translateX(-48%);
+  transform: translateX(-48%) rotate(9deg);
 }
 
 .box-wrapper .frameworks .line {
@@ -57,28 +55,36 @@
   left: -12.55%;
 }
 
+.box-wrapper .frameworks .img-box img {
+  margin: 0.7em 1em;
+}
+
 .box-wrapper .frontend {
-  text-align: center;
+  text-align: left;
   width: 350px;
-  height: 280px;
-  background: rgba(255, 255, 255, 0.13);
+  height: 300px;
+  background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
-  position: absolute;
-  left: -90%;
-  top: 60%;
+  padding-left: 1em;
+}
+
+.box-wrapper .frontend .img-box {
+  padding-left: 2em;
+  padding-top: 0.7em;
+}
+
+.box-wrapper .frontend .img-box img {
+  margin: 0.5em 0.8em;
 }
 
 .box-wrapper .backend {
   text-align: center;
   width: 250px;
   height: 230px;
-  background: rgba(255, 255, 255, 0.13);
+  background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
-  position: absolute;
-  right: -70%;
-  top: 27%;
 }
 
 .box-wrapper .backend .line {
@@ -91,16 +97,24 @@
   left: -27%;
 }
 
+.box-wrapper .backend .img-box img {
+  margin: 0.5em 0.5em;
+}
+
+.box-wrapper .backend .img-box div {
+  display: inline-block;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 0.8em;
+}
+
 .box-wrapper .tools {
-  text-align: center;
+  text-align: left;
   width: 250px;
   height: 200px;
-  background: rgba(255, 255, 255, 0.13);
+  background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
-  position: absolute;
-  left: 80%;
-  bottom: -60%;
+  padding-left: 1em;
 }
 
 .box-wrapper .tools .line {
@@ -113,16 +127,23 @@
   left: 7%;
 }
 
+.box-wrapper .tools .img-box {
+  text-align: center;
+  padding-top: 0.8em;
+  margin-right: 1em;
+}
+
+.box-wrapper .tools .img-box img {
+  margin: 0.5em 0.5em;
+}
+
 .box-wrapper .design {
   text-align: center;
   width: 280px;
   height: 200px;
-  background: rgba(255, 255, 255, 0.13);
+  background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
-  position: absolute;
-  right: 30%;
-  bottom: -80%;
 }
 
 .box-wrapper .design .line {
@@ -133,4 +154,12 @@
   position: absolute;
   top: 40%;
   right: -17%;
+}
+
+.box-wrapper .design .img-box {
+  padding-top: 1em;
+}
+
+.box-wrapper .design .img-box img {
+  margin: 0.5em 0.3em;
 }
