--- a/public/scss/common.scss
+++ b/public/scss/common.scss
@@ -14,25 +14,21 @@ a:hover{
   color: #4bf1f1;
 }
 
-header{
-  .h-wrapper {
-    background: url(../img/p3-2.jpg) no-repeat center center fixed;
-    .navi-wrapper {
-      z-index: 9999;
-      background-color: #1d1d1d;
-      position: relative;
-      .navi {
-        position: fixed;
-        top: 50%; transform: translateY(-50%);
-        left: 1.25%;
-        .menu {
-          width: 100%; height: 50px;
-          text-align: center;
-          a{
-            font-size: 1.7em;
-            color: #dedede;
-          }
-        }
+header {
+  z-index: 9999;
+  width: 70px; height: 100vh;
+  background-color: #111;
+  position: fixed;
+  .navi {
+    position: absolute;
+    top: 50%; left: 50%; 
+    transform: translate(-50%, -50%);
+    .menu {
+      width: 100%; height: 50px;
+      text-align: center;
+      a{
+        font-size: 1.7em;
+        color: #dedede;
       }
     }
   }
