--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -19,14 +19,14 @@
 		.title-wrap {
 			position: relative;
 			.box {
-				width: 0.2em; height: 1em; background-color: #4af1f1; position: absolute; left: -1.6%; top: 1.5%;
+				width: 0.2em; height: 1.2em; background-color: #4af1f1; position: absolute; left: -1.7%; top: 1.5%;
 				@include tablet {
 					width: 0.5em; height: 1.9em;
 					left: -25%;
 				}
 			}
 			.line {
-				width: 100%; height: 0.02em; background-color: #4af1f1; position: absolute; left: 75.2%; top: 43%;
+				width: 100vh; height: 0.02em; background-color: #4af1f1; position: absolute; left: 75.2%; top: 43%;
 				@include tablet {
 					top: 7%;
 					left: 37%;
