--- a/public/scss/skills.scss
+++ b/public/scss/skills.scss
@@ -14,24 +14,26 @@
 	}
 }
 .box-wrapper {
-	position: absolute;
-	top: 40%; left: 53%;
-	transform: translate(-40%,-53%);
+	font-family: $d2;
+	width: 100%; height: 100%;
+	margin-bottom: 2em;
+	// position: absolute;
+	// top: 40%; left: 53%;
+	// transform: translate(-40%,-53%);
 	color: #dedede;
 	font-size: 1.5em;
-	img{
-		width: 70px; height: 70px;
-	}
 	.frameworks {
 		text-align: center;
 		width: 450px; height: 380px;
-		background: rgba(255, 255, 255, 0.13);
+		background: rgba(255, 255, 255, 0.23);
 		border: 1px solid #dedede;
-		padding-top: 2em;
+		padding-top: 1.5em;
 		position: relative;
 		.tape {
-			position: absolute; top: -13%; left: 48%;
-			transform: translateX(-48%);
+			width: 30px; height: 70px;
+			background-color: rgba(255, 255, 255, 0.26);
+			position: absolute; top: -11%; left: 48%;
+			transform: translateX(-48%) rotate(9deg);
 		}
 		.line {
 			width: 2.3em; height: 0.02em;
@@ -39,59 +41,93 @@
 			background-color: #dedede;
 			position: absolute; top: 80%; left: -12.55%;
 		}
+		.img-box {
+			img {
+				margin: 0.7em 1em;
+			}
+		}
 	}
 	.frontend {
-		text-align: center;
-		width: 350px; height: 280px;
-		background: rgba(255, 255, 255, 0.13);
+		text-align: left;
+		width: 350px; height: 300px;
+		background: rgba(255, 255, 255, 0.23);
 		border: 1px solid #dedede;
 		padding-top: 1em;
-		position: absolute;
-		left: -90%; top: 60%;
+		padding-left: 1em;
+		// position: absolute;
+		// left: -90%; top: 60%;
+		.img-box {
+			padding-left: 2em;
+			padding-top: 0.7em;
+			img {
+				margin: 0.5em 0.8em;
+			}
+		}
 	}
 	.backend {
 		text-align: center;
 		width: 250px; height: 230px;
-		background: rgba(255, 255, 255, 0.13);
+		background: rgba(255, 255, 255, 0.23);
 		border: 1px solid #dedede;
 		padding-top: 1em;
-		position: absolute;
-		right: -70%; top: 27%;
+		// position: absolute;
+		// right: -70%; top: 27%;
 		.line {
 			width: 2.75em; height: 0.02em;
 			opacity: .5;
 			background-color: #dedede;
 			position: absolute; top: 10%; left: -27%;
 		}
+		.img-box {
+			img {
+				margin: 0.5em 0.5em;
+			}
+			div {display: inline-block; font-family: $Notos; font-size: 0.8em;}
+		}		
 	}
 	.tools {
-		text-align: center;
+		text-align: left;
 		width: 250px; height: 200px;
-		background: rgba(255, 255, 255, 0.13);
+		background: rgba(255, 255, 255, 0.23);
 		border: 1px solid #dedede;
 		padding-top: 1em;
-		position: absolute;
-		left: 80%; bottom: -60%;
+		padding-left: 1em;
+		// position: absolute;
+		// left: 80%; bottom: -60%;
 		.line {
 			width: 0.02em; height: 1.2em;
 			opacity: .5;
 			background-color: #dedede;
 			position: absolute; top: -15%; left: 7%;
 		}
+		.img-box {
+			text-align: center;
+			padding-top: 0.8em;
+			margin-right: 1em;
+			img {
+				margin: 0.5em 0.5em;
+			}
+		}
 	}
 	.design {
 		text-align: center;
 		width: 280px; height: 200px;
-		background: rgba(255, 255, 255, 0.13);
+		background: rgba(255, 255, 255, 0.23);
 		border: 1px solid #dedede;
 		padding-top: 1em;
-		position: absolute;
-		right: 30%; bottom: -80%;
+		// position: absolute;
+		// right: 30%; bottom: -80%;
 		.line {
 			width: 1.85em; height: 0.05em;
 			opacity: .5;
 			background-color: #dedede;
 			position: absolute; top: 40%; right: -17%;
+		}
+		.img-box {
+			padding-top: 1em;
+			img {
+				margin: 0.5em 0.3em;
+			}
 		}
 	}
 }
