--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -6,31 +6,39 @@ block content
 	.box-wrapper 
 		.frameworks frameworks
 			.tape
-				img(src="../img/tape.png", alt="TapeImg")
 			.line
-			//- img(src="../img/sass.png", alt="")
-			//- img(src="../img/bootstrap.png", alt="")
-			//- img(src="../img/firebase.png", alt="")
-			//- img(src="../img/es6.png", alt="")
-			//- img(src="../img/jquery.png", alt="")
-			//- img(src="../img/react.png", alt="")
-			//- img(src="../img/vue.png", alt="")
+			.img-box
+				img(src="../img/sass.png", alt="" style="width: 70px;")
+				img(src="../img/bootstrap.png", alt="" style="width: 70px;")
+				img(src="../img/firebase.png", alt="")
+				img(src="../img/es6.png", alt="" style="width: 70px; height:70px;")
+				img(src="../img/jquery.png", alt="" style="width: 70px; height:70px;")
+				img(src="../img/react.png", alt="" style="width: 70px;")
+				img(src="../img/vue.png", alt="" style="width: 70px;")
 		.frontend front-end
-			//- img(src="../img/html.png", alt="")
-			//- img(src="../img/css.png", alt="")
-			//- img(src="../img/pug.png", alt="")
-			//- img(src="../img/js.png", alt="")
+			.img-box
+				img(src="../img/html.png", alt="" style="width: 70px;")
+				img(src="../img/css.png", alt="" style="width: 70px;")
+				img(src="../img/js.png", alt="" style="width: 70px; height:70px;")
+				img(src="../img/pug.png", alt="" style="width: 85px;")
 		.backend back-end
 			.line
-			//- img(src="../img/mysql.png", alt="")
-			//- img(src="../img/aws.png", alt="")
+			.img-box
+				img(src="../img/mysql.png", alt="" style="width: 70px;")
+				img(src="../img/aws.png", alt="" style="width: 70px;")
+				img(src="../img/nodejs.png", alt="" style="width: 70px;")
+				//- img(src="../img/expressjs.png", alt="" style="width: 100px;")
+				div express
 		.tools tools
 			.line
-			//- img(src="../img/github.png", alt="")
-			//- img(src="../img/visualstudio.png", alt="")
+			.img-box
+				img(src="../img/git.png", alt="" style="width: 70px;")
+				img(src="../img/vs.png", alt="" style="width: 70px;")
 		.design design		
 			.line
-			//- img(src="../img/photoshop.png", alt="")
-			//- img(src="../img/illerstrator.png", alt="")
+			.img-box
+				img(src="../img/ps.png", alt="" style="width: 70px; height:70px;")
+				img(src="../img/xd.png", alt="" style="width: 70px; height:70px;")
+				img(src="../img/ai.png", alt="" style="width: 70px; height:70px;")
 
 	
